--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -11,9 +11,6 @@
   "about": {
     "message": "Über uns"
   },
-  "accept_terms": {
-    "message": "Bedingungen akzeptieren"
-  },
   "ad_blocking": {
     "message": "Werbeblocker"
   },
@@ -34,21 +31,21 @@
   "anti_tracking": {
     "message": "Anti-Tracking"
   },
-  "any_questions__anytime_": {
-    "message": "Haben Sie Fragen? Wir sind immer für Sie da!"
-  },
   "apply_optimal_privacy_settings_": {
     "message": "Privatsphäreeinstellungen optimal anwenden:"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Sind Sie sicher, dass Sie die Trackervorschau deaktivieren möchten?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Sind Sie sicher, dass Sie Ghostery nicht aktivieren wollen?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "Are you sure you want to keep Ghostery disabled?"
   },
   "audio_video_player": {
     "message": "Audio/Video-Player",
     "description": "Tracker category name"
+  },
+  "automatically_rejects_of_cookie_consent_notices_": {
+    "message": "Automatically rejects of cookie consent notices."
   },
   "back": {
     "message": "Zurück"
@@ -66,11 +63,11 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Sieh dir die <a href=\"$${0}\" target=\"_blank\"> FAQs </a> an oder schreibe uns eine E-Mail an <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Wir freuen uns darauf, mit dir zu sprechen!"
-  },
   "clear_all": {
     "message": "Alle löschen"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "Click the puzzle icon next to the search bar and pin Ghostery to your toolbar."
   },
   "comments": {
     "message": "Kommentare",
@@ -85,9 +82,6 @@
   },
   "contact_support": {
     "message": "Kontakt zum Support"
-  },
-  "continue": {
-    "message": "Weiter"
   },
   "copied_to_clipboard": {
     "message": "In die Zwischenablage kopiert"
@@ -108,11 +102,14 @@
   "disabled": {
     "message": "Deaktiviert"
   },
+  "displays_the_tracker_count_on_the_ghostery_icon_in_the_browser_toolbar_": {
+    "message": "Displays the tracker count on the Ghostery icon in the browser toolbar."
+  },
   "done": {
     "message": "Erledigt"
   },
-  "eliminates_ads_on_websites_you_visit__offering_a_calm__safe_and_private_internet_": {
-    "message": "Eliminates ads on websites you visit, offering a calm, safe and private internet."
+  "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
+    "message": "Eliminates ads on wesbites for safe and fast browsing."
   },
   "email": {
     "message": "E-Mail-Adresse",
@@ -120,6 +117,9 @@
   },
   "enable_ghostery": {
     "message": "Ghostery aktivieren"
+  },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Enable Ghostery to browse the web safer, faster, and with less ads."
   },
   "enable_ghostery_to_get_started": {
     "message": "Aktivieren Sie Ghostery, um loszulegen"
@@ -141,20 +141,26 @@
   "for_more_information_read_our_full": {
     "message": "Für weitere Informationen lesen Sie bitte unsere vollständigen"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "Ghostery Browser Extension is installed in your browser but is inactive. You are browsing the web unprotected."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "Ghostery can't block them due to missing permissions."
+  },
   "ghostery_has_been_resumed_on_this_site_": {
     "message": "Ghostery wird auf dieser Website fortgesetzt."
   },
   "ghostery_has_nothing_to_do_on_this_page": {
     "message": "Ghostery hat auf dieser Seite nichts zu tun"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery is all set to stop trackers in their tracks and protect your privacy while browsing!"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery is disabled"
+  },
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery pausiert auf dieser Website."
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery ist so eingestellt, dass es Tracker stoppt und Ihre Privatsphäre beim Browsen schützt!"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery stoppt Tracker in ihren Gleisen und verhindert, dass ein Daten-Profil über dich erstellt wird und deine persönlichen Informationen an Datenhändler verkauft werden."
   },
   "ghostery_paused": {
     "message": "Ghostery pausiert"
@@ -162,14 +168,14 @@
   "ghostery_privacy_policy": {
     "message": "Ghostery-Datenschutzrichtlinie"
   },
-  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collectors__from_ads_to_trackers_and_cookie_popups_": {
-    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collectors, from ads to trackers and cookie popups."
-  },
-  "ghostery_s_ai_driven_anti_tracking_technology_prevents_various_tracking_techniques_securing_your_digital_privacy_while_browsing_the_web_": {
-    "message": "Ghostery’s AI driven Anti-Tracking technology prevents various tracking techniques securing your digital privacy while browsing the web."
+  "ghostery_protects_your_privacy_by_detecting_and_neutralizing_different_types_of_data_collection_including_ads__trackers__and_cookie_pop_ups_": {
+    "message": "Ghostery protects your privacy by detecting and neutralizing different types of data collection including ads, trackers, and cookie pop-ups."
   },
   "ghostery_settings": {
     "message": "Ghostery-Einstellungen"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery stops trackers in their tracks and prevents you from being profiled by data brokers."
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
     "message": "Ghostery pausiert auf dieser Website. Sie können dies jederzeit in den Ghostery-Einstellungen ändern, damit Tracker und Werbung Ihnen nicht durchs Web folgen"
@@ -180,27 +186,30 @@
   "ghostery_will_be_paused_on_this_site_for_1_hour": {
     "message": "Ghostery wird auf dieser Seite für 1 Stunde pausiert"
   },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery will show how many trackers were blocked on a page. Clicking on the Ghostery icon reveals more detailed information."
+  },
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "Ich stimme zu, nicht-personenbezogene Daten an <a href=\"$${0}\"> Ghostery's WhoTracks.Me </a> zu senden, und akzeptiere die <a href=\"$${1}\"> Ghostery Datenschutzbestimmungen </a> "
+  "ignore": {
+    "message": "Ignore"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "Information about web trackers will be shared in accordance with our <a href=\"$${0}\">Privacy Policy</a>"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Es existiert dank der Beiträge jedes Ghostery-Nutzers, der sich dafür entscheidet, nicht-personenbezogene Informationen an WhoTracks.Me zu senden. Diese Informationen ermöglichen es Ghostery, Echtzeitinformationen über Tracker zu liefern, die wiederum die gesamte Ghostery-Gemeinschaft schützen."
+  },
+  "keep_disabled": {
+    "message": "Keep disabled"
   },
   "learn_more": {
     "message": "Weitere Informationen"
   },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Machen Sie Ghostery zum Rundumschutz für Ihre Privatsphäre, der Popups und Tracking ablehnt, oder tun Sie es selbst!"
-  },
-  "manifest_name": {
-    "message": "Ghostery – Datenschutzorientierter Werbeblocker"
-  },
-  "manifest_short_description": {
-    "message": "Ghostery ist eine leistungsstarke Datenschutz-Erweiterung. Damit können Sie Werbung blockieren, Tracker stoppen und Websites beschleunigen."
   },
   "menu": {
     "message": "Menü"
@@ -260,6 +269,15 @@
   "permission_required": {
     "message": "Berechtigung erforderlich"
   },
+  "pin_extension_for_easy_access": {
+    "message": "Pin Extension for easy access"
+  },
+  "pin_it_here": {
+    "message": "Pin it here"
+  },
+  "prevents_various_tracking_techniques_using_ai_driven_technology_": {
+    "message": "Prevents various tracking techniques using AI-driven technology."
+  },
   "privacy_policy": {
     "message": "Datenschutzrichtlinie"
   },
@@ -272,11 +290,8 @@
   "read_more_on_whotracks_me": {
     "message": "Lesen Sie mehr auf WhoTracks.Me"
   },
-  "removes_intrusive_cookie_popups_and_expresses_dissent_to_online_tracking__you_can_browse_the_web_without_worrying_about_cookie_consent_dialogues_or_privacy_violations_": {
-    "message": "Removes intrusive cookie popups and expresses dissent to online tracking. You can browse the web without worrying about cookie consent dialogues or privacy violations."
-  },
-  "replaces_ghostery_icon_in_the_browser_toolbar": {
-    "message": "Replaces Ghostery icon in the browser toolbar"
+  "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
+    "message": "Replaces the Ghostery icon in the browser toolbar with the tracker wheel."
   },
   "report_a_broken_page": {
     "message": "Fehlerhafte Seite melden"
@@ -290,11 +305,11 @@
   "settings": {
     "message": "Einstellungen"
   },
-  "show_tracker_count_badge_on_the_ghostery_icon_in_browser_toolbar": {
-    "message": "Tracker-Zählung im Ghostery-Icon der Browser-Toolbar anzeigen"
+  "setup_successful": {
+    "message": "Setup Successful"
   },
-  "shows_statistical_information_about_website_tracking_on_search_engine_result_page": {
-    "message": "Shows statistical information about website tracking on search engine result page"
+  "shows_the_tracker_preview_beside_search_results_": {
+    "message": "Shows the tracker preview beside search results."
   },
   "sign_in": {
     "message": "Anmelden"
@@ -320,8 +335,8 @@
     "message": "Telemetrie",
     "description": "Tracker category name"
   },
-  "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
-    "message": "Die Ghostery-Browsererweiterung ist in Ihrem Browser installiert, aber Ghosty macht gerade eine kleine Pause."
+  "terms___conditions": {
+    "message": "Konditionen"
   },
   "tired_of_cookie_popups_": {
     "message": "HABEN SIE GENUG VON COOKIE-POPUPS?"
@@ -354,11 +369,17 @@
   "websites": {
     "message": "Websites"
   },
+  "welcome_to_ghostery": {
+    "message": "Willkommen bei Ghostery"
+  },
   "what_is_whotracks_me_": {
     "message": "Was ist WhoTracks.Me?"
   },
-  "when_pausing_ghostery_on_individual_websites_for_various_personal_reasons__those_websites_will_appear_here_": {
-    "message": "When pausing Ghostery on individual websites for various personal reasons, those websites will appear here."
+  "what_s_next_": {
+    "message": "What’s next?"
+  },
+  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
+    "message": "When pausing Ghostery on individual websites, those websites will appear here."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me wird von Ghostery betrieben und ist ein Bestandteil der Ghostery KI-Anti-Tracking-Technologie. Es ist eine umfassende globale Quelle für Tracker und bringt Transparenz in das Web-Tracking."
@@ -369,28 +390,22 @@
   "whotracks_me_wheel": {
     "message": "Whotracks.me-Rad"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Wenn du Ghostery aktivierst, kannst du sofort sicher, schneller und mit weniger lästiger Werbung surfen."
-  },
   "yes": {
     "message": "Ja"
+  },
+  "you_can_adjust_the_settings_below__we_recommend_keeping_them_on_at_all_times_": {
+    "message": "You can adjust the settings below. We recommend keeping them ON at all times."
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Sie können diese Einstellungen im <strong>Ghostery-Steuerbereich</strong> ändern."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "Du kannst deine Meinung jederzeit ändern und Ghostery aktivieren, die Tracker für dich im Ghostery-Panel zu verfolgen."
-  },
-  "you_can_manage_the_functionality_of_these_privacy_components_to_your_liking__we_recommend_keeping_them_on_at_all_times_": {
-    "message": "You can manage the functionality of these privacy components to your liking. We recommend keeping them ON at all times."
-  },
-  "you_chose_to_skip_enabling_ghostery_": {
-    "message": "Sie haben sich entschieden, Ghostery nicht zu aktivieren!"
-  },
-  "you_re_all_set__ghosterian_": {
-    "message": "Sie sind bereit, Ghosterianer!"
+  "you_can_change_your_mind_at_any_time_and_enable_ghostery_in_the_ghostery_panel_to_start_tracking_the_trackers_": {
+    "message": "You can change your mind at any time and enable Ghostery in the Ghostery panel to start tracking the trackers."
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Neben den Suchergebnissen werden keine Tracker-Räder mehr angezeigt."
+  },
+  "your_privacy_features_": {
+    "message": "Your Privacy Features:"
   }
 }
