--- a/extension-manifest-v2/_locales/de/messages.json
+++ b/extension-manifest-v2/_locales/de/messages.json
@@ -1,7 +1,4 @@
 {
-  "accept_terms": {
-    "message": "Bedingungen akzeptieren"
-  },
   "account_creation_privacy_statement": {
     "message": "Es gelten unsere allgemeinen $LINK_TERMS_START$Konditionen$LINK_TERMS_END$ und unsere $LINK_UA_START$Lizenzvereinbarung$LINK_UA_END$. Unsere Datenschutzerklärung $LINK_PS_START$ finden Sie hier$LINK_PS_END$.",
     "placeholders": {
@@ -27,6 +24,9 @@
   },
   "ad": {
     "message": "Werbung"
+  },
+  "ad_blocking": {
+    "message": "Werbeblocker"
   },
   "additional_permissions_required": {
     "message": "Zusätzliche Berechtigungen erforderlich"
@@ -138,8 +138,8 @@
   "android_untrust": {
     "message": "Rückgängig machen"
   },
-  "any_questions__anytime_": {
-    "message": "Haben Sie Fragen? Wir sind immer für Sie da!"
+  "anti_tracking": {
+    "message": "Anti-Tracking"
   },
   "apply_optimal_privacy_settings_": {
     "message": "Privatsphäreeinstellungen optimal anwenden:"
@@ -150,8 +150,8 @@
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Sind Sie sicher, dass Sie die Trackervorschau deaktivieren möchten?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "Sind Sie sicher, dass Sie Ghostery nicht aktivieren wollen?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "Soll Ghostery wirklich deaktiviert bleiben?"
   },
   "audio_video_player": {
     "message": "Audio/Video-Player",
@@ -552,9 +552,6 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Sieh dir die <a href=\"$${0}\" target=\"_blank\"> FAQs </a> an oder schreibe uns eine E-Mail an <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Wir freuen uns darauf, mit dir zu sprechen!"
-  },
   "choose_your_default_search": {
     "message": "Standard-Suche wählen"
   },
@@ -563,6 +560,9 @@
   },
   "choose_your_privacy_plan": {
     "message": "Datenschutzplan auswählen"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "Klicken Sie auf das Puzzle-Symbol neben der Suchleiste, um Ghostery an die Werkzeugleiste anzuheften."
   },
   "click2play_allow_always_tooltip": {
     "description": "Tooltip that appears over the 'allow always' click2play button.",
@@ -644,9 +644,6 @@
     "message": "Zustimmungsmanagement",
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
-  "continue": {
-    "message": "Weiter"
-  },
   "cookie": {
     "message": "Cookie"
   },
@@ -717,6 +714,9 @@
   "enable_ghostery": {
     "message": "Ghostery aktivieren"
   },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Aktivieren Sie Ghostery, um schneller, sicherer und mit weniger Werbung im Web zu surfen."
+  },
   "enable_ghostery_to_get_started": {
     "message": "Aktivieren Sie Ghostery, um loszulegen"
   },
@@ -785,26 +785,38 @@
   "ghostery_basic": {
     "message": "Basic"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "Die Ghostery-Browser-Erweiterung ist in Ihrem Browser installiert, aber nicht aktiviert. Sie surfen ungeschützt im Web."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "Ghostery kann sie aufgrund fehlender Berechtigungen nicht blocken."
+  },
   "ghostery_disabled": {
     "message": "Ghostery deaktiviert"
   },
   "ghostery_enabled": {
     "message": "Ghostery aktiviert"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery ist bereit, um Tracker zu unterbinden und Ihre Daten zu schützen, während Sie browsen!"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery ist deaktiviert"
+  },
   "ghostery_is_ready": {
     "message": "Ghostery ist bereit!"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery ist so eingestellt, dass es Tracker stoppt und Ihre Privatsphäre beim Browsen schützt!"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery stoppt Tracker in ihren Gleisen und verhindert, dass ein Daten-Profil über dich erstellt wird und deine persönlichen Informationen an Datenhändler verkauft werden."
   },
   "ghostery_privacy_policy": {
     "message": "Ghostery-Datenschutzrichtlinie"
   },
   "ghostery_settings": {
     "message": "Ghostery-Einstellungen"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery unterbindet Tracker und verhindert, dass Datenagenturen ein Profil von Ihnen erstellen."
+  },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery zeigt Ihnen, wie viele Tracker auf einer Seite blockiert wurden. Wenn Sie auf das Ghostery-Symbol klicken, erhalten Sie detailliertere Informationen."
   },
   "global_settings_saved": {
     "message": "Globale Einstellungen gespeichert"
@@ -828,8 +840,11 @@
     "message": "Hosting",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "Ich stimme zu, nicht-personenbezogene Daten an <a href=\"$${0}\"> Ghostery's WhoTracks.Me </a> zu senden, und akzeptiere die <a href=\"$${1}\"> Ghostery Datenschutzbestimmungen </a> "
+  "ignore": {
+    "message": "Ignorieren"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "Informationen über Web-Tracker werden gemäß unserer <a href=\"$${0}\">Datenschutzrichtlinie</a> geteilt"
   },
   "invalid_email_forgot": {
     "message": "Verzeihung, Sie müssen eine echte E-Mail-Adresse eingeben."
@@ -839,6 +854,9 @@
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Es existiert dank der Beiträge jedes Ghostery-Nutzers, der sich dafür entscheidet, nicht-personenbezogene Informationen an WhoTracks.Me zu senden. Diese Informationen ermöglichen es Ghostery, Echtzeitinformationen über Tracker zu liefern, die wiederum die gesamte Ghostery-Gemeinschaft schützen."
+  },
+  "keep_disabled": {
+    "message": "Deaktiviert lassen"
   },
   "last_name_field_label": {
     "message": "Nachname (Optional):"
@@ -1279,6 +1297,12 @@
   "pick_a_default_search_engine": {
     "message": "Wählen Sie eine Standard-Suchmaschine für Ihre Suchen."
   },
+  "pin_extension_for_easy_access": {
+    "message": "Erweiterung für leichteren Zugriff anheften"
+  },
+  "pin_it_here": {
+    "message": "Hier anheften"
+  },
   "please_enter_a_valid_email": {
     "message": "Bitte geben Sie eine gültige E-Mail-Adresse ein."
   },
@@ -1610,6 +1634,9 @@
   "settings_wtm_serp_report": {
     "message": "Tracker-Vorschau in Suchergebnissen anzeigen"
   },
+  "setup_successful": {
+    "message": "Einrichtung erfolgreich"
+  },
   "seven_day_free_trial": {
     "message": "7 Tage kostenlose Testversion"
   },
@@ -1790,6 +1817,9 @@
     "message": "Telemetrie",
     "description": "Tracker category name"
   },
+  "terms___conditions": {
+    "message": "Konditionen"
+  },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Die Ghostery-Browsererweiterung ist in Ihrem Browser installiert, aber Ghosty macht gerade eine kleine Pause."
   },
@@ -1872,6 +1902,9 @@
   "what_is_whotracks_me_": {
     "message": "Was ist WhoTracks.Me?"
   },
+  "what_s_next_": {
+    "message": "Wie geht es weiter?"
+  },
   "white_black_list_error_invalid_url": {
     "message": "Geben Sie eine gültige URL oder einen Platzhalter ein."
   },
@@ -1888,17 +1921,14 @@
   "whotracks_me_statistical_report": {
     "message": "WhoTracks.Me-Statistiken"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Wenn du Ghostery aktivierst, kannst du sofort sicher, schneller und mit weniger lästiger Werbung surfen."
-  },
   "yes": {
     "message": "Ja"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Sie können diese Einstellungen im <strong>Ghostery-Steuerbereich</strong> ändern."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "Du kannst deine Meinung jederzeit ändern und Ghostery aktivieren, die Tracker für dich im Ghostery-Panel zu verfolgen."
+  "you_can_change_your_mind_at_any_time_and_enable_ghostery_in_the_ghostery_panel_to_start_tracking_the_trackers_": {
+    "message": "Sie können es sich jederzeit anders überlegen und Ghostery im Ghostery Steuerpult aktivieren, um Tracker zu verfolgen."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Sie haben sich entschieden, Ghostery nicht zu aktivieren!"
@@ -1911,5 +1941,8 @@
   },
   "your_email_do_not_match": {
     "message": "Ihre E-Mail-Adressen stimmen nicht überein."
+  },
+  "your_privacy_features_": {
+    "message": "Ihre Datenschutzfunktionen:"
   }
 }
