--- a/extension-manifest-v2/_locales/es/messages.json
+++ b/extension-manifest-v2/_locales/es/messages.json
@@ -1,7 +1,4 @@
 {
-  "accept_terms": {
-    "message": "Aceptar términos"
-  },
   "account_creation_privacy_statement": {
     "message": "Se aplican nuestros $LINK_TERMS_START$Términos y condiciones$LINK_TERMS_END$ generales y nuestro $LINK_UA_START$Acuerdo de licencia$LINK_UA_END$. Puedes ver nuestra Política de privacidad $LINK_PS_START$aquí$LINK_PS_END$.",
     "placeholders": {
@@ -27,6 +24,9 @@
   },
   "ad": {
     "message": "anuncio"
+  },
+  "ad_blocking": {
+    "message": "Bloqueador de anuncios"
   },
   "additional_permissions_required": {
     "message": "Se requieren permisos adicionales"
@@ -138,8 +138,8 @@
   "android_untrust": {
     "message": "Deshacer"
   },
-  "any_questions__anytime_": {
-    "message": "¿Preguntas? ¡Cuando quieras!"
+  "anti_tracking": {
+    "message": "Antirrastreadores"
   },
   "apply_optimal_privacy_settings_": {
     "message": "Aplicar ajustes de privacidad óptimos:"
@@ -150,8 +150,8 @@
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "¿Seguro que quieres desactivar la vista previa de rastreadores?"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "¿Seguro que quieres omitir la activación de Ghostery?"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "¿Seguro que quieres mantener Ghostery deshabilitado?"
   },
   "audio_video_player": {
     "message": "Reproductor de audio/vídeo",
@@ -552,9 +552,6 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Consulta las preguntas frecuentes de <a href=\"$${0}\" target=\"_blank\"> </a> o escríbenos a <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Estaremos encantados de hablar contigo."
-  },
   "choose_your_default_search": {
     "message": "Elige tu búsqueda predeterminada"
   },
@@ -563,6 +560,9 @@
   },
   "choose_your_privacy_plan": {
     "message": "Elige tu plan de privacidad"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "Haz clic en el icono con forma de puzle que está junto a la barra de búsqueda y ancla Ghostery a la barra de herramientas."
   },
   "click2play_allow_always_tooltip": {
     "description": "Tooltip that appears over the 'allow always' click2play button.",
@@ -644,9 +644,6 @@
     "message": "Gestión del consentimiento",
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
-  "continue": {
-    "message": "Continuar"
-  },
   "cookie": {
     "message": "cookie"
   },
@@ -717,6 +714,9 @@
   "enable_ghostery": {
     "message": "Habilitar Ghostery"
   },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Habilita Ghostery para navegar por la red de forma más rápida y segura, y con menos anuncios."
+  },
   "enable_ghostery_to_get_started": {
     "message": "Activa Ghostery para empezar"
   },
@@ -785,26 +785,38 @@
   "ghostery_basic": {
     "message": "Básico"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "La extensión de navegador Ghostery está instalada en el navegador, pero está inactiva. Estás navegando por la red sin protección."
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "Ghostery no puede bloquearlos, porque le faltan permisos."
+  },
   "ghostery_disabled": {
     "message": "Ghostery deshabilitado"
   },
   "ghostery_enabled": {
     "message": "Ghostery habilitado"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "¡Ghostery está listo para pararles los pies a los rastreadores y proteger tu privacidad mientras navegas!"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery está deshabilitado"
+  },
   "ghostery_is_ready": {
     "message": "¡Ghostery está listo!"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "¡Ghostery está listo para detener a los rastreadores y proteger tu privacidad mientras navegas!"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery detiene a los rastreadores en su camino y evita que se elaboren perfiles y se venda tu información personal a los corredores de datos."
   },
   "ghostery_privacy_policy": {
     "message": "Política de privacidad de Ghostery"
   },
   "ghostery_settings": {
     "message": "Ajustes de Ghostery"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery les para los pies a los rastreadores y evita que los intermediarios de datos realicen perfiles sobre ti."
+  },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery mostrará cuántos rastreadores ha bloqueado en una página. Si haces clic en el icono de Ghostery, verás información más detallada."
   },
   "global_settings_saved": {
     "message": "Ajustes globales guardados"
@@ -828,8 +840,11 @@
     "message": "Hosting",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "Acepto el envío de información no personal a <a href=\"$${0}\"> WhoTracks.Me de Ghostery </a>, y acepto la política de privacidad de <a href=\"$${1}\"> Ghostery </a> "
+  "ignore": {
+    "message": "Ignorar"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "La información sobre los rastreadores web se compartirá de acuerdo con nuestra <a href=\"$${0}\">Política de privacidad</a>"
   },
   "invalid_email_forgot": {
     "message": "Lo sentimos, pero debes indicar una dirección de correo electrónico real."
@@ -839,6 +854,9 @@
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Existe gracias a las microcontribuciones de cada usuario de Ghostery que decide enviar información no personal a WhoTracks.Me. Esta aportación permite a Ghostery proporcionar información en tiempo real sobre los rastreadores, lo que a su vez proporciona protección a toda la comunidad de Ghostery."
+  },
+  "keep_disabled": {
+    "message": "Mantener deshabilitado"
   },
   "last_name_field_label": {
     "message": "Apellidos (opcional):"
@@ -1279,6 +1297,12 @@
   "pick_a_default_search_engine": {
     "message": "Elige un motor de búsqueda predeterminado para todas tus búsquedas."
   },
+  "pin_extension_for_easy_access": {
+    "message": "Ancla la extensión para acceder a ella fácilmente"
+  },
+  "pin_it_here": {
+    "message": "Ánclala aquí"
+  },
   "please_enter_a_valid_email": {
     "message": "Por favor, indica una dirección de correo electrónico válida."
   },
@@ -1610,6 +1634,9 @@
   "settings_wtm_serp_report": {
     "message": "Mostrar vista previa de rastreadores junto a los resultados de la búsqueda"
   },
+  "setup_successful": {
+    "message": "La configuración ha terminado"
+  },
   "seven_day_free_trial": {
     "message": "Prueba gratuita de 7 días"
   },
@@ -1790,6 +1817,9 @@
     "message": "Telemetría",
     "description": "Tracker category name"
   },
+  "terms___conditions": {
+    "message": "Términos y condiciones"
+  },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "La extensión del navegador Ghostery está instalada en su navegador, pero Ghosty se está echando una siestecita."
   },
@@ -1872,6 +1902,9 @@
   "what_is_whotracks_me_": {
     "message": "¿Qué es WhoTracks.Me?"
   },
+  "what_s_next_": {
+    "message": "¿Qué es lo siguiente?"
+  },
   "white_black_list_error_invalid_url": {
     "message": "Introduce un URL o comodín válidos."
   },
@@ -1888,17 +1921,14 @@
   "whotracks_me_statistical_report": {
     "message": "Informe estadístico de WhoTracks.Me"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Con Ghostery activado, navegas instantáneamente por la web de forma más segura, más rápida y con menos anuncios molestos."
-  },
   "yes": {
     "message": "Sí"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "Siempre puedes cambiar estos ajustes en el&nbsp;<strong>panel de control de Ghostery</strong>."
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "Puedes cambiar de opinión en cualquier momento y permitir que Ghostery empiece a seguir los rastreadores por ti en el panel de Ghostery."
+  "you_can_change_your_mind_at_any_time_and_enable_ghostery_in_the_ghostery_panel_to_start_tracking_the_trackers_": {
+    "message": "Puedes cambiar de opinión en cualquier momento y habilitar Ghostery en su panel para empezar a vigilar a los rastreadores."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "¡Has elegido no habilitar Ghostery!"
@@ -1911,5 +1941,8 @@
   },
   "your_email_do_not_match": {
     "message": "Tus correos no coinciden."
+  },
+  "your_privacy_features_": {
+    "message": "Tus funciones de privacidad:"
   }
 }
