--- a/extension-manifest-v2/_locales/ja/messages.json
+++ b/extension-manifest-v2/_locales/ja/messages.json
@@ -1,7 +1,4 @@
 {
-  "accept_terms": {
-    "message": "条件を受け入れる"
-  },
   "account_creation_privacy_statement": {
     "message": "Ghostery が一般的に定める$LINK_TERMS_START$利用規約$LINK_TERMS_END$と$LINK_UA_START$ライセンス契約$LINK_UA_END$が適用されます。個人情報の取扱方針については$LINK_PS_START$こちら$LINK_PS_END$をご覧ください。",
     "placeholders": {
@@ -27,6 +24,9 @@
   },
   "ad": {
     "message": "広告"
+  },
+  "ad_blocking": {
+    "message": "広告ブロッキング"
   },
   "additional_permissions_required": {
     "message": "必要な追加パーミッション"
@@ -138,8 +138,8 @@
   "android_untrust": {
     "message": "元に戻す"
   },
-  "any_questions__anytime_": {
-    "message": "何か質問は？ いつでもOK!"
+  "anti_tracking": {
+    "message": "追跡防止"
   },
   "apply_optimal_privacy_settings_": {
     "message": "最適なプライバシー設定を適用:"
@@ -150,8 +150,8 @@
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "Trackers Previewを無効にしてもよいですか？"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "本当にGhosteryを有効にしなくてもいいのですか？"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "本当にGhosteryを無効にしたままでよいですか？"
   },
   "audio_video_player": {
     "message": "オーディオ/ビデオ・プレーヤー",
@@ -552,9 +552,6 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "<a href=\"$${0}\" target=\"_blank\">FAQs</a> を確認するか、<a href=\"mailto:$${1}\">$${2}</a>までお問い合わせください。 <br/> ぜひ、ご相談ください。"
-  },
   "choose_your_default_search": {
     "message": "デフォルトの検索エンジンを選択"
   },
@@ -563,6 +560,9 @@
   },
   "choose_your_privacy_plan": {
     "message": "プライバシープランを選択"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "検索バーの横にあるパズルのアイコンをクリックし、Ghosteryをツールバーに固定します。"
   },
   "click2play_allow_always_tooltip": {
     "description": "Tooltip that appears over the 'allow always' click2play button.",
@@ -644,9 +644,6 @@
     "message": "同意の管理",
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
-  "continue": {
-    "message": "継続"
-  },
   "cookie": {
     "message": "クッキー"
   },
@@ -717,6 +714,9 @@
   "enable_ghostery": {
     "message": "Ghosteryを有効にする"
   },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "Ghosteryを有効にすることで、より安全に、より速く、より少ない広告でウェブを閲覧することができます。"
+  },
   "enable_ghostery_to_get_started": {
     "message": "Ghosteryを有効にして開始する"
   },
@@ -785,26 +785,38 @@
   "ghostery_basic": {
     "message": "ベーシック"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "Ghostery Browser Extensionはブラウザにインストールされていますが、非アクティブになっています。あなたは無防備にウェブを閲覧していることになります。"
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "Ghosteryは権限が足りないため、ブロックできません。"
+  },
   "ghostery_disabled": {
     "message": "Ghosteryが無効化"
   },
   "ghostery_enabled": {
     "message": "Ghosteryが有効化"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghosteryは、トラッカーを足止めし、ブラウジング中のプライバシーを保護するようにきちんと設定されています!"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghosteryが無効になっています"
+  },
   "ghostery_is_ready": {
     "message": "Ghosteryはあなたを待っています!"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghosteryは、トラッカーを足止めし、ブラウジング中のプライバシーを保護するように設定されています!"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghosteryはトラッカーの追跡を止め、あなたがプロファイリングされ、あなたの個人情報がデータブローカーに売られることを防いでいます。"
   },
   "ghostery_privacy_policy": {
     "message": "Ghosteryプライバシー・ポリシー"
   },
   "ghostery_settings": {
     "message": "Ghostery 設定"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghosteryはトラッカーの追跡を阻止し、データブローカーによるプロファイリングを防止します。"
+  },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghosteryは、あるページでブロックされたトラッカーの数を表示します。Ghosteryのアイコンをクリックすると、より詳細な情報が表示されます。"
   },
   "global_settings_saved": {
     "message": "グローバル設定が保存されました"
@@ -828,8 +840,11 @@
     "message": "ホスティング",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "<a href=\"$${0}\">Ghostery’s WhoTracks.Me</a>に個人情報以外の情報を送信することに同意し、<a href=\"$${1}\">GhosteryのPrivacy Policy</a><a href=\"$${0}\">WhoTracks.Me</a> を承諾します。"
+  "ignore": {
+    "message": "無視する"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "ウェブトラッカーに関する情報は、当社の<a href=\"$${0}\">プライバシーポリシー</a>に基づき共有されます"
   },
   "invalid_email_forgot": {
     "message": "申し訳ありませんが、実際のメールアドレスを入力してください。"
@@ -839,6 +854,9 @@
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "これは、WhoTracks.Meに個人情報以外の情報を送信することを選択したGhosteryユーザー全員による、小さな貢献のおかげで存在しています。 入力すると、Ghosteryは見返りとしてトラッカーと保護に関するリアルタイムの情報をGhosteryのコミュニティ全体に提供することができます。"
+  },
+  "keep_disabled": {
+    "message": "無効にしておく"
   },
   "last_name_field_label": {
     "message": "姓（オプション）："
@@ -1279,6 +1297,12 @@
   "pick_a_default_search_engine": {
     "message": "すべての検索で使用するデフォルトの検索エンジンを選択してください。"
   },
+  "pin_extension_for_easy_access": {
+    "message": "アクセスしやすいようにExtensionをピン留めする"
+  },
+  "pin_it_here": {
+    "message": "ここにピン留め"
+  },
   "please_enter_a_valid_email": {
     "message": "有効なメールアドレスを入力してください。"
   },
@@ -1610,6 +1634,9 @@
   "settings_wtm_serp_report": {
     "message": "検索結果の隣にトラッカーのプレビューを表示する"
   },
+  "setup_successful": {
+    "message": "セットアップ成功"
+  },
   "seven_day_free_trial": {
     "message": "7日間の無料試用版"
   },
@@ -1790,6 +1817,9 @@
     "message": "テレメトリー",
     "description": "Tracker category name"
   },
+  "terms___conditions": {
+    "message": "利用規約"
+  },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Ghostery Browser Extensionはブラウザにインストールされていますが、Ghostyは休止中です。"
   },
@@ -1872,6 +1902,9 @@
   "what_is_whotracks_me_": {
     "message": "WhoTracks.Meとは何か？"
   },
+  "what_s_next_": {
+    "message": "次は何をするのでしょうか？"
+  },
   "white_black_list_error_invalid_url": {
     "message": "有効なURLまたはワイルドカードを入力してください。"
   },
@@ -1888,17 +1921,14 @@
   "whotracks_me_statistical_report": {
     "message": "WhoTracks.Me統計レポート"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "Ghosteryを有効にすると、より安全に、より速く、そして迷惑な広告をより減らす形で、ウェブを瞬時にブラウズすることができます。"
-  },
   "yes": {
     "message": "はい"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "&nbsp;<strong>Ghostery制御パネル</strong>でこれら設定をいつでも変更できます。"
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "お客様はいつでも考えが変わったときに、Ghosteryのパネルで、お客様へのトラッカーの追跡開始を有効にすることができます。"
+  "you_can_change_your_mind_at_any_time_and_enable_ghostery_in_the_ghostery_panel_to_start_tracking_the_trackers_": {
+    "message": "いつでも気が変わったら、GhosteryパネルでGhosteryを有効にして、トラッカーの追跡を開始することができます。"
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Ghosteryの有効化のスキップを選択しました。"
@@ -1911,5 +1941,8 @@
   },
   "your_email_do_not_match": {
     "message": "お客様のメールアドレスは一致しません。"
+  },
+  "your_privacy_features_": {
+    "message": "あなたのプライバシーを守る機能:"
   }
 }
