--- a/extension-manifest-v2/_locales/zh_CN/messages.json
+++ b/extension-manifest-v2/_locales/zh_CN/messages.json
@@ -1,7 +1,4 @@
 {
-  "accept_terms": {
-    "message": "接受条款"
-  },
   "account_creation_privacy_statement": {
     "message": "我们的一般$LINK_TERMS_START$条款和条件$LINK_TERMS_END$ 和$LINK_UA_START$许可协议$LINK_UA_END$适用。您可以在$LINK_PS_START$此处$LINK_PS_END$找到我们的隐私声明。",
     "placeholders": {
@@ -27,6 +24,9 @@
   },
   "ad": {
     "message": "条广告"
+  },
+  "ad_blocking": {
+    "message": "广告拦截"
   },
   "additional_permissions_required": {
     "message": "需要额外的权限"
@@ -138,8 +138,8 @@
   "android_untrust": {
     "message": "撤消"
   },
-  "any_questions__anytime_": {
-    "message": "有疑问？ 随时为您解答！"
+  "anti_tracking": {
+    "message": "反跟踪功能"
   },
   "apply_optimal_privacy_settings_": {
     "message": "应用最佳隐私设置："
@@ -150,8 +150,8 @@
   "are_you_sure_you_want_to_disable_trackers_preview_": {
     "message": "确定要禁用跟踪器预览吗？"
   },
-  "are_you_sure_you_want_to_skip_enabling_ghostery_": {
-    "message": "确定要跳过启用 Ghostery 吗？"
+  "are_you_sure_you_want_to_keep_ghostery_disabled_": {
+    "message": "确定要禁用 Ghostery 吗？"
   },
   "audio_video_player": {
     "message": "音频/视频播放器",
@@ -552,9 +552,6 @@
     "message": "CDN",
     "description": "Tracker category name"
   },
-  "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "查看<a href=\"$${0}\" target=\"_blank\">常见问题解答</a>或发送邮件至 <a href=\"mailto:$${1}\">$${2}< /a>。 <br/>我们非常乐意与您交谈！"
-  },
   "choose_your_default_search": {
     "message": "选择您的默认搜索"
   },
@@ -563,6 +560,9 @@
   },
   "choose_your_privacy_plan": {
     "message": "请选择您的隐私套餐"
+  },
+  "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
+    "message": "点击搜索栏旁边的拼图图标，将 Ghostery 固定在工具栏。"
   },
   "click2play_allow_always_tooltip": {
     "description": "Tooltip that appears over the 'allow always' click2play button.",
@@ -644,9 +644,6 @@
     "message": "意见征求管理",
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
-  "continue": {
-    "message": "继续"
-  },
   "cookie": {
     "message": "条 cookie"
   },
@@ -717,6 +714,9 @@
   "enable_ghostery": {
     "message": "启用 Ghostery"
   },
+  "enable_ghostery_to_browse_the_web_safer__faster__and_with_less_ads_": {
+    "message": "启用 Ghostery 开启更安全、更迅速、更少广告的网页浏览体验。"
+  },
   "enable_ghostery_to_get_started": {
     "message": "启用 Ghostery 以开始使用"
   },
@@ -785,26 +785,38 @@
   "ghostery_basic": {
     "message": "Basic"
   },
+  "ghostery_browser_extension_is_installed_in_your_browser_but_is_inactive__you_are_browsing_the_web_unprotected_": {
+    "message": "Ghostery 浏览器扩展程序已安装至您的浏览器中，但尚未启用。您当前的网页浏览不受保护。"
+  },
+  "ghostery_can_t_block_them_due_to_missing_permissions_": {
+    "message": "由于缺乏相关权限，Ghostery 无法阻止。"
+  },
   "ghostery_disabled": {
     "message": "Ghostery 已禁用"
   },
   "ghostery_enabled": {
     "message": "Ghostery 已启用"
   },
+  "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
+    "message": "Ghostery 已准备好阻止跟踪器，并在您浏览时保护您的隐私！"
+  },
+  "ghostery_is_disabled": {
+    "message": "Ghostery 已禁用"
+  },
   "ghostery_is_ready": {
     "message": "Ghostery 已就绪！"
-  },
-  "ghostery_is_set_up_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery 是为了在浏览时阻止跟踪器并保护您的隐私！"
-  },
-  "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery 正在阻止跟踪器的踪迹，并防止他人分析您的特征并将您的个人信息出售给数据中介。"
   },
   "ghostery_privacy_policy": {
     "message": "Ghostery 隐私政策"
   },
   "ghostery_settings": {
     "message": "Ghostery 设置"
+  },
+  "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
+    "message": "Ghostery 阻止跟踪器的跟踪，并防止数据中介获取您的个人信息。"
+  },
+  "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
+    "message": "Ghostery 会显示页面上已阻止的跟踪器数量。点击 Ghostery 图标，获取更多详情。"
   },
   "global_settings_saved": {
     "message": "全局设置已保存"
@@ -828,8 +840,11 @@
     "message": "托管",
     "description": "Tracker category name"
   },
-  "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "我同意将非个人信息发送到 <a href=\"$${0}\">Ghostery 的 WhoTracks.Me</a>，并且接受 <a href=\"$${1}\">Ghostery 隐私政策</a>"
+  "ignore": {
+    "message": "忽略"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
+    "message": "网页跟踪器的相关信息将依据我们的<a href=\"$${0}\">隐私政策</a>予以披露"
   },
   "invalid_email_forgot": {
     "message": "抱歉，您必须输入真实的电子邮件地址。"
@@ -839,6 +854,9 @@
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "它的存在要归功于每个选择将非个人信息给 WhoTracks.Me 的 Ghostery 用户的微小贡献。 这些输入使 Ghostery 能够提供有关跟踪器的实时情报，从而为整个 Ghostery 社区提供保护。"
+  },
+  "keep_disabled": {
+    "message": "保持禁用"
   },
   "last_name_field_label": {
     "message": "姓氏（可选）："
@@ -1279,6 +1297,12 @@
   "pick_a_default_search_engine": {
     "message": "选择用于所有搜索的默认搜索引擎。"
   },
+  "pin_extension_for_easy_access": {
+    "message": "锁定扩展程序以便轻松访问"
+  },
+  "pin_it_here": {
+    "message": "在此处锁定"
+  },
   "please_enter_a_valid_email": {
     "message": "请输入有效的电子邮件地址。"
   },
@@ -1610,6 +1634,9 @@
   "settings_wtm_serp_report": {
     "message": "在搜索结果旁显示跟踪器预览"
   },
+  "setup_successful": {
+    "message": "安装成功"
+  },
   "seven_day_free_trial": {
     "message": "7 天免费试用"
   },
@@ -1790,6 +1817,9 @@
     "message": "遥测",
     "description": "Tracker category name"
   },
+  "terms___conditions": {
+    "message": "条款和条件"
+  },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Ghostery 浏览器扩展程序已安装在您的浏览器中，但 Ghosty 暂未工作。"
   },
@@ -1872,6 +1902,9 @@
   "what_is_whotracks_me_": {
     "message": "什么是 WhoTracks.Me？"
   },
+  "what_s_next_": {
+    "message": "下一步是？"
+  },
   "white_black_list_error_invalid_url": {
     "message": "请输入有效的网址或通配符。"
   },
@@ -1888,17 +1921,14 @@
   "whotracks_me_statistical_report": {
     "message": "WhoTracks.Me 统计报告"
   },
-  "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "启用 Ghostery 后，您可以立即更安全、更快速地浏览网页，并减少恼人的广告。"
-  },
   "yes": {
     "message": "是"
   },
   "you_can_always_change_these_settings_in_the_nbsp__strong_ghostery_control_panel__strong__": {
     "message": "您可以随时在&nbsp;<strong>Ghostery 控制面板</strong>中更改这些设置。"
   },
-  "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "您可以随时改变主意，在 Ghostery 面板中启用 Ghostery 开始追踪跟踪器。"
+  "you_can_change_your_mind_at_any_time_and_enable_ghostery_in_the_ghostery_panel_to_start_tracking_the_trackers_": {
+    "message": "您可以随时在 Ghostery 面板启用 Ghostery 来追踪跟踪器。"
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "您选择跳过启用 Ghostery！"
@@ -1911,5 +1941,8 @@
   },
   "your_email_do_not_match": {
     "message": "您的电子邮件地址不符。"
+  },
+  "your_privacy_features_": {
+    "message": "您的隐私功能："
   }
 }
